apps/nextcloud/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: default
  annotations:
    tailscale.com/hostname: nextcloud
spec:
  ingressClassName: tailscale
  rules:
    - host: nextcloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
