apps/nextcloud/mariadb-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall-mariadb-policy
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: mariadb
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-mariadb-policy
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: mariadb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nextcloud
      ports:
        - protocol: TCP
          port: 3306
