apps/nextcloud/nextcloud-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall-nextcloud-policy
  namespace: nextcloud
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-policy
  namespace: nextcloud
spec:
  podSelector: 
    matchLabels:
      app: nextcloud
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: go-puller
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ai
      ports:
        - protocol: TCP
          port: 80
